--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:200,100,400');
+
 body {
     font-family: 'Raleway', sans-serif;
     height: 100vh;
@@ -15,7 +16,8 @@ body {
     padding: 0 3rem;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-weight: 200;
     margin: 0.4rem;
 }
@@ -45,6 +47,7 @@ h2 {
     .container {
         padding: 0 1rem;
     }
+
     h1 {
         font-size: 3rem;
     }
@@ -54,6 +57,7 @@ h2 {
     h1 {
         font-size: 2.5rem;
     }
+
     h2 {
         font-size: 1.5rem;
     }
