--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:200,100,400');
-
 body {
     font-family: 'Raleway', sans-serif;
     height: 100vh;
     background: #333 url('backgroundImg.jpg') no-repeat center center / cover;
     color: #ccc;
-    overflow: hidden;
+    /*     overflow: hidden;
+ */
 }
 
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
+    height: 75%;
     padding: 0 3rem;
 }
 
-h1,
-h2 {
+h1, h2 {
     font-weight: 200;
     margin: 0.4rem;
 }
@@ -47,7 +46,6 @@ h2 {
     .container {
         padding: 0 1rem;
     }
-
     h1 {
         font-size: 3rem;
     }
@@ -57,8 +55,31 @@ h2 {
     h1 {
         font-size: 2.5rem;
     }
-
     h2 {
         font-size: 1.5rem;
     }
 }
+
+/*Scrolling Progress Bar*/
+
+.header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 100%;
+    background-color: #f1f1f1;
+}
+
+.progress-container {
+    width: 100%;
+    height: 3px;
+    background: black;
+}
+
+.progress-bar {
+    height: 3px;
+    background: #00BFFF;
+    width: 0%;
+}
+
