Style Changes, added contact.html

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     flex-direction: column;
     justify-content: center;
     height: 75%;
-    padding: 0 3rem;
+    padding: 300px 3rem;
 }
 
 h1, h2 {
