--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     height: 100vh;
-    background: #333 url('backgroundImg.jpg') no-repeat center center / cover;
+    background: #333 url('Img/backgroundImg.jpg') no-repeat center center / cover;
     color: #ccc;
     /*     overflow: hidden;
  */
