--- a/loginForm.css
+++ b/loginForm.css
@@ -22,7 +22,7 @@ html {
 .form-log-in-with-email .form-white-background {
     width: 570px;
     box-sizing: border-box;
-    background-color: #ffffff;
+    background-color: darkcyan;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
     padding: 60px 80px;
     margin-bottom: 32px;
